--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.11",
     "@mdx-js/react": "^1.6.11",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-catch-links": "^2.3.10",
+    "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-mdx": "^1.2.27",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.20",
+    "gatsby-source-contentful": "^2.3.32",
     "gatsby-source-filesystem": "^2.3.19",
     "gatsby-transformer-sharp": "^2.5.11",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-intersection-observer": "^8.26.2"
+    "react-intersection-observer": "^8.26.2",
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "gatsby-cli": "^2.12.66",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -33,7 +39,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
