--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sharp": "^2.6.20",
     "gatsby-source-contentful": "^2.3.32",
     "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.11",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
