--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-intersection-observer": "^8.26.2",
+    "react-loading": "^2.0.3",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
