--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-helmet": "^6.0.0",
     "react-intersection-observer": "^8.26.2",
     "react-loading": "^2.0.3",
+    "react-scroll": "^1.8.0",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
