--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
     "react-scroll": "^1.8.0",
+    "react-share": "^4.2.1",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
