--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-catch-links": "^2.3.10",
     "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-google-analytics": "^2.3.11",
+    "gatsby-plugin-htaccess": "^1.4.0",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-mdx": "^1.2.34",
     "gatsby-plugin-offline": "^3.2.23",
