--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
     "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-htaccess": "^1.4.0",
-    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-manifest": "^2.4.27",
     "gatsby-plugin-mdx": "^1.2.34",
     "gatsby-plugin-offline": "^3.2.23",
     "gatsby-plugin-postcss": "^2.3.11",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.6.30",
+    "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-remark-images": "^3.3.28",
-    "gatsby-source-contentful": "^2.3.32",
+    "gatsby-remark-images-contentful": "^2.3.15",
+    "gatsby-source-contentful": "^2.3.41",
     "gatsby-source-filesystem": "^2.3.19",
     "gatsby-transformer-remark": "^2.8.28",
-    "gatsby-transformer-sharp": "^2.5.11",
+    "gatsby-transformer-sharp": "^2.5.14",
+    "gatsby-transformer-sqip": "^2.3.31",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
