--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@contentful/rich-text-types": "^14.1.1",
     "@mdx-js/mdx": "^1.6.11",
     "@mdx-js/react": "^1.6.16",
+    "@reach/router": "^1.3.4",
     "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.13",
